# cloudinha-conecta-agent

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  Dockerfile  Dockerfile.mcp  PROJECT_CONTEXT.md  cloudbuild-mcp.yaml  cloudbuild.yaml  conftest.py  env.example.yaml  env.yaml  main.py  mcp_launcher.py  pyproject.toml  start_agent.bat  start_mcp.bat  test_output.txt
.github/workflows/: gitleaks.yml
scratch/: check_mcp_tools.py  test_resolution.py
src/: config.py  dependencies.py
src/agents/: planning.py  reasoning.py  response.py
src/contracts/: agent_result.py  reasoning_report.py  structured_plan.py
src/mcp/: client.py  server.py
src/models/: chat_events.py  chat_request.py
src/services/: context_service.py  prompt_service.py  resilience.py  retrieval_service.py  schema_discovery.py  session_service.py  supabase_client.py
src/tools/: cep_lookup.py  user_data.py
src/workflow/: engine.py  streaming.py  system_intents.py
tests/: conftest.py  test_agent_result.py  test_contracts.py  test_engine_log_turn.py  test_engine_telemetry_on_mcp_failure.py  test_mcp_client_timeout.py  test_mcp_server.py  test_planning.py  test_planning_agent_result.py  test_prompt_service.py  test_reasoning.py  test_reasoning_agent_result.py  test_response_agent_result.py  test_user_data_tools.py  test_workflow.py
tests/workflow/: __init__.py  test_system_intents_page_context.py
